<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Login">

    <EditText
        android:id="@+id/etname"
        android:hint="@string/hintname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <EditText
        android:id="@+id/etemail"
        android:hint="@string/hintemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/etname"
        android:layout_marginTop="91dp"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <EditText
        android:id="@+id/etbranch"
        android:hint="@string/hintbranch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/etname"
        android:layout_marginTop="164dp"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <EditText
        android:id="@+id/etpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/etname"
        android:layout_marginBottom="183dp"
        android:ems="10"
        android:hint="@string/hintpass"
        android:inputType="textPersonName"
         />

    <EditText
        android:id="@+id/etconfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/etname"
        android:layout_marginBottom="113dp"
        android:ems="10"
        android:hint="@string/hintconfirm"
        android:inputType="textPersonName"
         />

    <Button
        android:id="@+id/btnsubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="gotoprofile"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:text="SUBMIT" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="271dp"
        android:background="?android:attr/listDivider" />

</RelativeLayout>